# memorize_words

./: .gitignore  WORD_BOOK_UPDATE_ACCEPTANCE.md  build.gradle.kts  gradle.properties  readme.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
build-logic/: build.gradle.kts  settings.gradle.kts
character-pack-release/: README.md  SHA256SUMS.txt  green_pet_catalog_item.json  green_pet_catalog_response.example.json  green_pet_upload_metadata.json
character-pack-tooling/: .gitignore  README.md  build_character_pack.py  character_pack.py  pack.example.yaml  pack_pipeline.py  pack_release.py  requirements.txt
character-pack-tooling/host-validator/: CMakeLists.txt  README.md  basis_ktx2_validator.cpp
character-pack-tooling/tests/: test_pack_tooling.py
core-common/: build.gradle.kts
core-database/: build.gradle.kts
core-navigation/: build.gradle.kts
core-network/: build.gradle.kts
core-session/: build.gradle.kts
core-sprite-animation/: build.gradle.kts  consumer-rules.pro
core-sprite-animation/src/main/cpp/: CMakeLists.txt  exports.map  sprite_basis_jni.cpp
core-ui/: build.gradle.kts
data/: build.gradle.kts
data-account/: build.gradle.kts
data-feedback/: build.gradle.kts
data-floating/: build.gradle.kts
data-practice/: build.gradle.kts
data-study/: build.gradle.kts
data-sync/: build.gradle.kts
data-sync/src/main/: AndroidManifest.xml
data-word/: build.gradle.kts
data-wordbook/: build.gradle.kts
data-wordbook/src/main/: AndroidManifest.xml
data/schemas/com.chen.memorizewords.data.floating.local.FloatingDatabase/: 1.json
data/schemas/com.chen.memorizewords.data.practice.local.PracticeDatabase/: 1.json  2.json
data/schemas/com.chen.memorizewords.data.study.local.StudyDatabase/: 1.json  2.json  3.json
data/schemas/com.chen.memorizewords.data.sync.local.room.SyncDatabase/: 1.json  2.json
data/schemas/com.chen.memorizewords.data.word.local.WordDatabase/: 1.json
data/src/main/: AndroidManifest.xml
doc/: API文档.md  功能清单.md  发布前功能验收清单.md  数据库设计文档.md  项目功能梳理.md
domain/: build.gradle.kts
domain-account/: build.gradle.kts
domain-feedback/: build.gradle.kts
domain-floating/: build.gradle.kts
domain-practice/: build.gradle.kts
domain-study/: build.gradle.kts
domain-sync/: build.gradle.kts
domain-wordbook/: build.gradle.kts
feature-feedback/: build.gradle.kts  lint-baseline.xml
feature-floating-review/: build.gradle.kts  lint-baseline.xml  lint.xml
feature-home/: build.gradle.kts  lint-baseline.xml
feature-learning/: build.gradle.kts  lint-baseline.xml
feature-onboarding/: build.gradle.kts  lint-baseline.xml
feature-user/: build.gradle.kts  lint-baseline.xml
feature-user/libs/: fusionauth-1.2.15-online-release.aar
feature-wordbook/: build.gradle.kts  lint-baseline.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
network/: build.gradle.kts
speech/: build.gradle.kts
speech-api/: build.gradle.kts
(+2515 files in other folders)
